package edu.austral.dissis.chess.engine;

public interface MoveCondition {
  void RuleCondition();
}
