package edu.austral.dissis.chess.engine;

public class MoveDown implements Movement{
  @Override
  public void move(Piece piece, int x, int y) {
    int actualPosition = piece.getActualPosition();


  }
}
