package edu.austral.dissis.chess.engine;

public class MoveLeft implements Movement{
  @Override
  public void move(Piece piece) {
    // piece.moveLeft();
  }
}
