package edu.austral.dissis.chess.engine;

public class MoveRight implements Movement{
  @Override
  public void move(Piece piece) {
    // piece.setX(piece.getX() + 1);
  }
}
