package edu.austral.dissis.chess.engine;

public class MoveUp implements Movement{

  @Override
  public void move(Piece piece) {
    //piece.setPosition(piece.getPosition().add(0, 1));
  }
}
