package edu.austral.dissis.chess.engine.Movement.Validator

import edu.austral.dissis.chess.engine.Game.Board
import edu.austral.dissis.chess.engine.Movement.Validator.MovementValidator
import edu.austral.dissis.chess.engine.Piece.Position

class ValidMove : MovementValidator {

  override fun checkMovement(from: Position, to: Position, board: Board): Boolean {
    TODO("Not yet implemented")
  }
}